--- a/client/styles/landing.css
+++ b/client/styles/landing.css
@@ -1,4 +1,3 @@
-
 .how-it-works-bottom {
   opacity: 0;
   -webkit-transition: .1s;
@@ -270,6 +269,7 @@ form.login-form {
   text-align: center;
   position: relative;
   margin: auto;
+  margin-top: 30px;
 }
 
 .login-container {
@@ -277,6 +277,7 @@ form.login-form {
   text-align: center;
   position: relative;
   margin: auto;
+  margin-top: 30px;
 }
 
 .fa.fa-facebook {
@@ -342,11 +343,11 @@ p.auth-options-copy {
 }
 
 form#loginForm {
-  width: 500px;
   height: 44px;
   position: relative;
   margin: auto;
   padding-bottom: 59px;
+  width: 620px;
 }
 
 .go-back-copy {
