--- a/client/styles/tooltip.css
+++ b/client/styles/tooltip.css
@@ -12,6 +12,10 @@
   margin-bottom: 5px;
 }
 
+.tooltip-container.register {
+  top: 51px;
+}
+
 .tooltip-content {
   position: relative;
   margin: auto;
