adds cancel and confirm registration ui refactor, overlay on fb connect

--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -25,6 +25,7 @@
       </div>
     </div>
   </div>
-  <div ng-show='dashCtrl.showTable()' ng-include src="'views/includes/dashboard-sessions.html'"></div>
+  <div ng-show='showOverlay' ng-include src="'views/includes/overlay-username.html'"></div>
+  <div ng-show='dashCtrl.showTable() && !showOverlay' ng-include src="'views/includes/dashboard-sessions.html'"></div>
   <div ng-hide='!isLoaded || dashCtrl.showTable() || dashCtrl.getState("overlay").isOpen || isLogout' ng-include src="'views/includes/no-sessions.html'"></div>
 </div ng-overlay>
