--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -318,9 +318,36 @@ button#details.btn.btn-md.members {
   text-transform: uppercase;
   bottom: 1px;
 }
+.btn-custom-username,
+.btn-custom-username:active,
+.btn-custom-username:focus {
+  outline: 0;
+  display: block;
+  width: 175px;
+  border-radius: 15px;
+  font-weight: 300;
+  text-decoration: none;
+  height: 35px;
+  cursor: pointer;
+  color: #fff;
+  background: 0 0;
+  border: 1px solid #1485CC;
+  position: relative;
+  padding-top: 5px;
+    top: 55px;
+  left: 80px;
+  text-align: center;
+  -webkit-transition: .1s;
+  -moz-transition: .1s;
+  -o-transition: .1s;
+  transition: .1s;
+  text-transform: uppercase;
+  bottom: 1px;
+}
 
 .btn-custom-login:hover,
-.btn-custom-login.register:hover {
+.btn-custom-login.register:hover,
+.btn-custom-username:hover {
   box-shadow: inset 0px 0px 30px 2px #1485CC;
   -webkit-transition: .1s;
   -moz-transition: .1s;
@@ -328,10 +355,11 @@ button#details.btn.btn-md.members {
   transition: .1s;
 }
 
-.btn-custom-login > p {
+.btn-custom-login > p,
+.btn-custom-username > p {
   position: relative;
   color: #fff;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
   top: 1px;
   margin: auto;
