--- a/client/styles/overlay.css
+++ b/client/styles/overlay.css
@@ -1,3 +1,14 @@
+#login-input-username {
+  width: 250px;
+  position: absolute;
+  left: 82px;
+  margin-top: -3px;
+}
+
+#username-form {
+  padding-top: 14px;
+}
+
 .exit-btn {
   width: 175px;
   height: 35px;
@@ -54,7 +65,6 @@
 }
 
 p.overlay-copy {
-  font-weight: 400;
   font-family: 'Open Sans', sans-serif;
   color: white;
   padding: 0 80px;
@@ -152,6 +162,7 @@ a.logo-text-overlay:active {
   font-size: 16px;
   top: 83px;
   font-weight: 400;
+  z-index: 4;
 }
 
 .overlay-container.slide-up-in {
@@ -193,6 +204,52 @@ a.logo-text-overlay:active {
   -moz-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+}
+
+.complete-registration {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  margin: auto;
+  margin-top: 30px;
+  color: white;
+}
+
+.complete-reg-header {
+  font-size: 20px;
+  font-weight: 400;
+  color: #1485CC;
+  text-align: left;
+  padding-left: 82px;
+}
+
+.complete-reg-copy.first {
+  padding-top: 10px;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  padding-left: 83px;
+  padding-bottom: 0;
+  margin-bottom: 5px;
+}
+
+.complete-reg-copy.last {
+  position: relative;
+  top: 50px;
+  font-weight: 300;
+}
+
+.complete-reg-copy {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: left;
+  padding-left: 83px;
+}
+
+.complete-reg-copy span {
+  color: #1485CC;
 }
 
 
