--- a/client/styles/tooltip.css
+++ b/client/styles/tooltip.css
@@ -12,6 +12,17 @@
   margin-bottom: 5px;
 }
 
+.tooltip-container.username {
+    width: 100%;
+    max-width: 300px;
+    top: 29px;
+    left: 81px;
+    padding-top: 0;
+    margin-top: 0;
+    position: relative;
+    padding-top: 4px;
+}
+
 .tooltip-container.register {
   top: 51px;
 }
