--- a/client/views/includes/login.html
+++ b/client/views/includes/login.html
@@ -2,9 +2,10 @@
   <form ng-hide='showForgotPassword' id="loginForm" name="authForm" class="form-inline" ng-submit="landingCtrl.validateLogin();">
     <input id="login-input-email" class="input-small" ng-model="user.email" name="email" type="text" placeholder="Email">
     <input id="login-input-password" class="input-small" ng-model="user.password" type="password" name="password" placeholder="Password">
-    <button ng-hide='showErr' type="submit" class="btn btn-custom-login">
+    <button ng-hide='showErr || showLoader' type="submit" class="btn btn-custom-login">
       <p>Login</p>
     </button>
+    <div ng-show='showLoader' class="loader"></div>
     <br>
     <div ng-show='showErr'>
       <div  class='tooltip-container login'>
@@ -13,7 +14,7 @@
         </div>
       </div>
     </div>
-    <div class='login-subtext-container'>
+    <div ng-hide='showLoader' class='login-subtext-container'>
       <p id='need-account' ng-click="landingCtrl.onOptSelected('register');">need an account?</p>
       <p id='forgot-password' ng-click="landingCtrl.onOptSelected('forgotPassword');"> forgot password?</p>
       <p id='remember-me'> remember me
