--- a/client/views/dashboard.html
+++ b/client/views/dashboard.html
@@ -3,13 +3,13 @@
     <p>DISABLED</p>
   </div>
 </div>
-<div ng-overlay clear-form='dashCtrl.clearForm()' ng-init='dashCtrl.isAuthenticated(); dashCtrl.registerEvents();' class='dashboard-overlay-container'>
-  <div id='dashboard-overlay' class='dashboard-overlay'>
+<div ng-init='dashCtrl.isAuthenticated(); dashCtrl.registerEvents();' class='dashboard-overlay-container'>
+  <!--   <div id='dashboard-overlay' class='dashboard-overlay'>
     <i id='dash-overlay-exit-btn' class="fa fa-times"></i>
     <div ng-hide="showConfirmation" ng-include src="'views/includes/create-room.html'"></div>
     <div ng-show="showConfirmation" ng-include src="'views/includes/create-confirmation.html'"></div>
-  </div>
-  <div id='dashboard-container' class="container">
+  </div> -->
+  <!--   <div ng-show='user.username && !showOverlay' id='dashboard-container' class="container">
     <div class="row-block">
       <div id='opts-container' class='white-block'></div>
       <div class="center-block btn-opts-container">
@@ -24,8 +24,19 @@
         </div>
       </div>
     </div>
+  </div> -->
+  <div ng-show='user.username && !showOverlay' class="create-broadcast-container">
+    <button  type="submit" class="btn btn-custom-create">
+      <p>create a room</p>
+    </button>
+    <button type="submit" class="btn btn-custom-broadcast ">
+      <p>create a broadcast</p>
+    </button>
   </div>
+  
   <div ng-show='showOverlay' ng-include src="'views/includes/overlay-username.html'"></div>
-  <div ng-show='dashCtrl.showTable() && !showOverlay' ng-include src="'views/includes/dashboard-sessions.html'"></div>
-  <div ng-hide='!isLoaded || dashCtrl.showTable() || dashCtrl.getState("overlay").isOpen || isLogout' ng-include src="'views/includes/no-sessions.html'"></div>
-</div ng-overlay>
+  <div ng-show='user.username && !showOverlay' class='session-container'>
+    <div ng-show='dashCtrl.showTable()' ng-include src="'views/includes/dashboard-sessions.html'"></div>
+    <div ng-hide='dashCtrl.showTable()' ng-include src="'views/includes/no-sessions.html'"></div>
+  </div>
+</div>
