--- a/client/styles/overlay.css
+++ b/client/styles/overlay.css
@@ -1,3 +1,8 @@
+.complete-reg-copy.guest-email {
+  margin-top: 25px;
+  margin-bottom: 17px;
+}
+
 #login-input-username {
   width: 250px;
   position: absolute;
@@ -5,8 +10,45 @@
   margin-top: -3px;
 }
 
+#room-name,
+#room-guest-email {
+  width: 250px;
+  position: relative;
+  left: 0;
+  margin-top: -5px;
+  display: block;
+  left: 83px;
+}
+
+#room-guest-email {
+  width: 250px;
+  position: relative;
+  left: 82px;
+  margin-top: -3px;
+}
+
 #username-form {
   padding-top: 14px;
+}
+
+.connect-opts-container {
+  position: relative;
+  width: 500px;
+  height: 64px;
+  left: 80px;
+  top: 29px;
+  text-align: left;
+}
+
+.connection-opts {
+  position: relative;
+  font-size: 14px;
+  font-weight: 600;
+  color: white;
+  text-align: left;
+  left: 85px;
+  top: 24px;
+  font-family: 'Open Sans', sans-serif
 }
 
 .exit-btn {
@@ -216,7 +258,7 @@ a.logo-text-overlay:active {
 }
 
 .complete-reg-header {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 400;
   color: #1485CC;
   text-align: left;
